-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 18, 19
-
Component/s: hotspot
-
b15
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8284768 | 18.0.2 | Zhengyu Gu | P3 | Resolved | Fixed | b03 |
Its destructor does not release _header.
- backported by
-
JDK-8284768 Memory leak in FileHeaderHelper
-
- Resolved
-
- relates to
-
JDK-8273152 Refactor CDS FileMapHeader loading code
-
- Resolved
-
- links to
-
Commit
openjdk/jdk18u/016ab4cd
-
Commit
openjdk/jdk/cb576da5
-
Review
openjdk/jdk18u/93
-
Review
openjdk/jdk/7872
(1 links to)