8283379: Memory leak in FileHeaderHelper

Backport-of: cb576da575ea3c8f14087dd312313843764ca2f4